# ChangeLog for dev-lang/nqp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/nqp/ChangeLog,v 1.55 2014/11/24 00:18:23 patrick Exp $

*nqp-2014.11 (24 Nov 2014)

  24 Nov 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.11.ebuild:
  Bump, parrot backend is disabled as it doesn't work

*nqp-2014.10 (25 Oct 2014)

  25 Oct 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.10.ebuild:
  Bump

  16 Oct 2014; Patrick Lauer <patrick@gentoo.org> nqp-2014.07.ebuild:
  Fix parrot dep

*nqp-2014.09 (19 Sep 2014)

  19 Sep 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.09.ebuild:
  Bump

*nqp-2014.08 (25 Aug 2014)

  25 Aug 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.08.ebuild:
  Bump

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> -nqp-2014.01-r1.ebuild,
  -nqp-2014.01.ebuild, -nqp-2014.02.ebuild, -nqp-2014.03.ebuild,
  -nqp-2014.04.ebuild, -nqp-2014.05.ebuild, -nqp-2014.06.ebuild:
  Remove old

*nqp-2014.07 (21 Jul 2014)

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.07.ebuild:
  Bump, hackfix for 3rdparty/dyncall compilation

*nqp-2014.06 (27 Jun 2014)

  27 Jun 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.06.ebuild:
  Bump, temporarily disable nqp-parrot as it fails to build

  26 May 2014; Patrick Lauer <patrick@gentoo.org> nqp-2014.05.ebuild:
  Whitespace

*nqp-2014.05 (26 May 2014)

  26 May 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.05.ebuild:
  Bump

*nqp-2014.04 (18 Apr 2014)

  18 Apr 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.04.ebuild,
  nqp-2014.03.ebuild:
  Bump, fix parrot dep

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> nqp-2014.01-r1.ebuild,
  nqp-2014.01.ebuild, nqp-2014.02.ebuild:
  Whitespace

*nqp-2014.03 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.03.ebuild,
  nqp-2014.01-r1.ebuild, nqp-2014.01.ebuild, nqp-2014.02.ebuild:
  Bump, restrict parrot dep #505894
