@@ -7,6 +7,6 @@ EBUILD nqp-2014.07.ebuild 1451 SHA256 d2c13e1994226e906e577d6a9a681d718f41a5fcf8
 EBUILD nqp-2014.08.ebuild 1452 SHA256 7a903e5657deb10e05e15c4ff789737b332683cc2e955c88e6b4267c9a48d647 SHA512 49b9f0350ddd66e14fc376973169dce16097b88717a6a3321cffbc0f8194fe2c6b90f2b6178bb130a957d3490adf194b4b2b99283b11e61c5bc94e0978933700 WHIRLPOOL fa413844e3eb945a051956858d1db60d4730739bf882aa51bb524e31cf690c78f68ba38d844b5c17263cce877f2489ba436831f3203f5ab9445212b9612b1dc6
 EBUILD nqp-2014.09.ebuild 1452 SHA256 f31035e37c3d0f7d793eb173326f9e7b0a261fa03f68a54ae8e11d687cc26cb3 SHA512 b5311c4d68b655b4b17536fa733d2a418711ade3d87567f228d641d35beae660b518a830cf3e3f74a80198d352533839e91d3c8cd4e25e0c5602a7e0550a78b7 WHIRLPOOL 02851f782f84214ccb6d219bc695eb7e88cfff32ba50f5b431d3a6c05d501a9f8e42587f2b846dbdf77042144a39e4c77bcfc599e22bcb9444ef59dd8ca44724
 EBUILD nqp-2014.10.ebuild 1452 SHA256 bac662b16cb3f4254a55531dbe25b1e6a4bd0597d666ed93db76df42daaee842 SHA512 e633b27bbb1e77791584e3c4e65080ed699dc5c9c8789b290f188a5b11615d424955684fff86db4efae73d409ec37ddb7c6780916555770e6b4e27de7409e766 WHIRLPOOL 9cd52b765b9625100fb23a18eceb4f6ef8aed5ba42359675c498f748fa7401effadceaa7e56079924ff665f7d539ccd2fbd6a4af865d67f6f0febc6731bd6abc
-EBUILD nqp-2014.11.ebuild 1349 SHA256 591f1506f51b5712d8dbccdf8e72c2ce5777b5b153d53e43c0846d5868786d08 SHA512 01312432963aff5f2d3d6ad91fc6b6a06d842a66a72d63cd0507aa40c5a6a400d695366ff3689de441e6aa8c3148d0f877eaec0f89e7b5e4e49666558d0aa782 WHIRLPOOL 514f3d197a893922b1bc359b9ec1335b7c12ac664b2ed593eca975d35389741c661ad40046931f174ff4e43812b0dc6441e5c5448a144a2710d666cc9fef12ca
-MISC ChangeLog 7254 SHA256 21a145e0f27c996643fed2d73d32a83a0447a9a884033009b3c7032b679b3b1c SHA512 c71ff063bc653dcb874b344216fb00e306d1aaf383240f8515ac9584d60f174bd19d6047fa718a2a422bf0d1b5440d826271ca0e39dbedf2b543c6a3878b0658 WHIRLPOOL 42ebc3d6ad75edb43a91102e996ac9573876d326aba81895807cd3f57afbaded284dfcffd1eaf127f388857cdf64faa05e47978de98622751ea54be7ddd66e42
+EBUILD nqp-2014.11-r1.ebuild 1629 SHA256 8769c7531207bff56c957c78ad17f15bb478bcbdf0415dc82bb27786596c3de9 SHA512 b789d597d3be5e9a4f7752bec8e88e70f69db1159e062f02bddcd4803a1597ff769f5853c7f14627dcec0151bae5060f28d4823e00041a4641189dd5a65dc33a WHIRLPOOL ce1196885b3b5d582cbb4a1508e78fb2138ca6e4a6de85ce7850f54c5d81196e32ebd5c22b489034391148c71ec938f2d76801ae379c8f9f3da09859de21e42c
+MISC ChangeLog 7440 SHA256 b1fd54688b47825b62aaeee6cdf26e9143d215499df6d1291aefaac4f0c817bc SHA512 d284c404402d6e6e687b758e9e78c966123ff608d3cbb68d29ab602859f4ddb0e650e7f870a2ef32773bb1004c4d4c3b5c05b004e34287303fdcbf66bbd2973a WHIRLPOOL a27969e5c41dfb9dba9902eae059969e9726c044d40facf53797a78845f7f6e8066a6d383ef35cfbe7870c2fc3e093ff07c884cec89ae21ab0769edc9015bda1
 MISC metadata.xml 404 SHA256 3e5dfb79d6f4a44b0fc997651ccde75103dcf25dd6aaa0f59a18489cd82cdd25 SHA512 0440da4fe44ec43ff8a88c16837d670825c2c02ed75e64d07cf325e8c101a29ba6532ac8af28579d089ae493cfa8ab2a380e4c534b4069babe15c2baa1238897 WHIRLPOOL a11b5e4adc6f2138d2b87619034347ab8f43aebe2673353f16c6623a981541ae366bc5eb6b2a05332de30b3291d241509f2bdc72153f3252bba539efb62edc7d
